--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,20 @@ import com.vipulasri.jetinstagram.buildsrc.Libs
 buildscript {
   repositories {
     google()
-    jcenter()
+    mavenCentral()
     maven { url "https://jitpack.io" }
   }
   dependencies {
     classpath Libs.androidGradlePlugin
     classpath Libs.Kotlin.gradlePlugin
+      classpath 'com.android.tools.build:gradle:7.4.1'
   }
 }
 
 allprojects {
   repositories {
     google()
-    jcenter()
+    mavenCentral()
     maven { url "https://jitpack.io" }
   }
 }
