--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 22 10:17:30 EST 2023
-sdk.dir=/Users/consultant/Library/Android/sdk
+#Wed Feb 22 12:17:04 EST 2023
+sdk.dir=C\:\\Users\\glenn\\AppData\\Local\\Android\\Sdk
