Fixed the build.gradle and AndroidManifest.xml to allow the project to build.

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import com.vipulasri.jetinstagram.buildsrc.Libs
 buildscript {
   repositories {
     google()
-    mavenCentral()
+    jcenter()
     maven { url "https://jitpack.io" }
   }
   dependencies {
@@ -16,7 +16,7 @@ buildscript {
 allprojects {
   repositories {
     google()
-    mavenCentral()
+   jcenter()
     maven { url "https://jitpack.io" }
   }
 }
