--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
 rootProject.name = "JetInstagram"
 include ':app'
+dependencyResolutionManagement{
+    repositories{
+        maven { url "https://jitpack.io" }
+    }
+}
